<resources>
    <string name="app_name">Atraccis</string>
    <string name="string_log_in" translatable="false">Log In</string>
    <string name="string_submit" translatable="false">Submit</string>
    <string name="string_next" translatable="false">Next</string>
    <string name="string_email" translatable="false">Enter Email</string>
    <string name="string_company" translatable="false">Select Company</string>
    <string name="string_password" translatable="false">Enter Passowrd</string>
    <string name="srirng_incharge" translatable="false">I am <u>Incharge</u> of company.</string>
    <string name="string_video" translatable="false">Video</string>
    <string name="string_song" translatable="false">Song</string>
    <string name="string_hypnosis" translatable="false">Hypnosis</string>
    <string name="string_terms">
        Pasos a seguir en ATRACCIS…\n\n

1- Elige tu hora para ver cada día un vídeo de 8 minutos y una canción de 2 minutos. Te sonará una alarma para recordártelo. Si no ves el video te volverá a recordar 30 minutos más tarde. Después de ver el vídeo te dejará escuchar la canción.
 \n(Se recomienda antes de empezar tu actividad y con auriculares) (Los fines de semana sonará a la misma hora)\n\n

2- Elige tu hora para escuchar un audio de hipnosis. Te sonará una alarma para recordártelo. Si no escuchas el audio te volverá a recordar 30 minutos más tarde.
 \n(Se recomienda antes de ir a dormir)\n (Los fines de semana sonará a la misma hora)\n\n

3- Realiza un pequeño test inicial para saber desde dónde partimos.
 \n(Se recomienda sinceridad para conseguir alcanzar tus objetivos)\n\n

4- ATRACCIS se compone de 10 videos, 10 canciones y un audio de hipnosis.
\n(Sólo podéis reproducir un video y canción por día, tantas veces como queráis)\n\n

5- Tienes un link de acceso para leer en digital o comprar el libro “Por si nunca nos volvemos a ver”. \n(El libro dispone de información más extendida de ATRACCIS, Las personas que incluyen este proceso de lectura obtienen innumerables beneficios, agudizan su astucia, estimulan su percepción, concentración y empatía.)
 \nhttps://www.autoreseditores.com/atraccis\n\n

6- ATRACCIS tiene dos fases, la primera de 30 días para ayudaros a crear nuevos hábitos que os acerquen a lo que queréis conseguir y la segunda fase son 60 días más para conseguir crear un estilo de vida.\n\n
7- A los 30, 60 y 90 días aparecerá un test de seguimiento para conocer tu evolución.\n\n

8 - Pasado los 90 días, no tendrás acceso al programa ATRACCIS\n\n

    </string>
    <string name="string_review">
        Enhorabuena por haber finalizado la 1º fase de ATRACCIS.\n\n

Su equipo ha conseguido en 30 días crear buenos hábitos para sentirse mejor y estar más cerca de alcanzar objetivos.\n\n

La regla de oro 21/90 es que se requieren 21 días para crear un hábito y 90 días para transformar ese hábito en un estilo de vida, por ello se ha de repetir el programa de ATRACCIS por 60 días más y así poder vivir una vida sin límites en lo personal y lo profesional.\n\n

ATRACCIS equivale a 30 horas de terapia. Una persona que necesite hacer de forma privada este tipo de terapia le supondría un coste mínimo de 1.500€\n\n

Si una empresa de 50 trabajadores requiere 30 horas de terapia para cada trabajador, esto supondría a la empresa un coste de 75.000€.\n\n

ATRACCIS ofrece esas 30 horas de terapia por un importe único de 2.760€ independientemente del número de trabajadores que reciban el programa.\n\n

Para empresas de 50 trabajadores, el coste por persona seria de 0,92€ x día con un total de 55,2€ por trabajador. \n\n

Es importante tomar acción si realmente quiere conseguir que su empresa se convierta en una organización más productiva y competitiva con personas más competentes, profesionales y enfocados.\n\n

Puede acceder fácilmente a la 2° fase de ATRACCIS abonando el importe desde el código QR que ve a continuación.\n\n

    </string>
    <string name="no_alarm">No Alarm Save Yet!</string>
    <string name="addAlarm">Add</string>
    <string name="settingsMenuItem">Settings</string>
    <string name="toast_alarmSwitchedOn">Alarm set for %s from now.</string>
    <plurals name="day">
        <item quantity="one">\u0020day</item>
        <item quantity="other">\u0020days</item>
    </plurals>
    <plurals name="hour">
        <item quantity="one">\u0020hour</item>
        <item quantity="other">\u0020hours</item>
    </plurals>
    <plurals name="mins">
        <item quantity="one">\u0020minute</item>
        <item quantity="other">\u0020minutes</item>
    </plurals>
    <string name="and">\u0020and\u0020</string>
    <string name="toast_alarmDeleted">The alarm at %s was deleted successfully.</string>
    <string name="toast_alarmSwitchedOff">The alarm at %s was switched off.</string>
    <string name="actionBarTitle_newAlarm">New alarm</string>
    <string name="actionBarTitle_editAlarm">Edit alarm</string>
    <string name="actionBarTitle_snoozeOptions">Snooze options</string>
    <string name="actionBarTitle_repeatOptions">Repeat options</string>
    <string name="actionBarTitle_dateOptions">Alarm date</string>
    <string name="actionBarTitle_alarmMessage">Alarm message</string>
    <string name="saveButton">SAVE</string>
    <string name="cancelButton">Cancel</string>
    <string name="repeatButton">Repeat:</string>
    <string name="repeatNone">Off</string>
    <string name="alarmType">Alarm type:</string>
    <string name="alarmVolumeLabel">Alarm Volume:</string>
    <string name="snoozeLabel">Snooze:</string>
    <string name="snoozeOffLabel">Off</string>
    <string name="alarmDateLabel">Alarm date:</string>
    <string name="alarmDate">%te\u0020%tm,\u0020%tY</string>
    <string-array name="alarmTypeSpinnerEntries">
        <item>Sound</item>
        <item>Vibrate</item>
        <item>Sound &amp; Vibrate</item>
    </string-array>
    <string name="snoozeOptionsTV_snoozeOn">%d mins, %d times</string>
    <string name="alarmToneLabel">Alarm tone:</string>
    <string name="alarmMessageLabel">Alarm message:</string>
    <string name="alarmMessage_default">Not set</string>
    <string name="switchOn">On</string>
    <string name="switchOff">Off</string>
    <string name="snoozeFrequencyLabel">Snooze frequency:</string>
    <string name="snoozeFreq_three">3 times</string>
    <string name="snoozeFreq_five">5 times</string>
    <string name="snoozeFreq_ten">10 times</string>
    <string name="snoozeFreq_custom">Custom frequency:</string>
    <string name="snoozeFreq_customHint">Enter a number</string>
    <string name="snoozeIntervalLabel">Snooze interval:</string>
    <string name="snoozeInterval_five">5 minutes</string>
    <string name="snoozeInterval_ten">10 minutes</string>
    <string name="snoozeInterval_fifteen">15 minutes</string>
    <string name="snoozeInterval_custom">Custom interval (in mins):</string>
    <string name="snoozeInterval_customHint">Enter interval</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="sound_and_vibrate">Sound &amp; Vibrate</string>
    <string name="time_24hour">%02d:%02d</string>
    <string name="time_12hour">%d:%02d\u0020%s</string>
    <string name="date">%s,\u0020%02d\u0020%s</string>
    <string name="alarmMessage">Alarm</string>
    <string name="alarmTime_24hour">%02d:%02d</string>
    <string name="snoozeAlarm">Snooze</string>
    <string name="pickDateLabel">Pick a date:</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="message_label">Enter the alarm message in no more than 50 characters:</string>
    <string name="notifContent_ring">Alarm ringing. Tap to launch alarm screen.</string>
    <string name="notifContent_snooze">Alarm snoozed. Tap to dismiss it.</string>
    <string name="chooseCustomTone">Choose from storage</string>
    <string name="defaultTone">Default</string>
    <string name="silentTone">Silent</string>
    <string name="play_tone">Play tone</string>
    <string name="ringtonePicker_defaultTitle">Select tone:</string>
    <string name="cancelDialogMessage">Discard changes?</string>
    <string name="cancelDialog_positive">Yes</string>
    <string name="cancelDialog_negative">No</string>
    <string name="permissionReasonExp_normal">This app needs permission to read your device storage so that
    it can read and play the alarm sound. Without this permission, the app may fail to ring the alarm. Give the permission?</string>
    <string name="permissionReasonExp_ringtonePicker">This app needs permission to read your device storage
        so that it can read the tones. Without this permission, the app will not work. Give the permission?</string>
    <string name="settings_title">Settings</string>
    <string name="shakeOp">If I <b>shake</b> the phone when an alarm rings,</string>
    <string name="powerBtnOp">If I press the <b>power button</b> when an alarm rings,</string>
    <string-array name="shakeAndPowerOptions">
        <item>Snooze the alarm.</item>
        <item>Dismiss the alarm.</item>
    </string-array>
    <string name="settings_snoozeOps"><b>Default snooze options</b>\n<small>(These will be the default snooze options
        when you create a new alarm.)</small></string>
    <string name="settings_snoozeInterval">Snooze interval in minutes:</string>
    <string name="settings_snoozeFreq">Snooze frequency:</string>
    <string name="settings_theme">Choose the theme:</string>
    <string-array name="themeOptions_noSystem">
        <item>According to time</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="themeOptions_all">
        <item>According to time</item>
        <item>Light</item>
        <item>Dark</item>
        <item>Set by system</item>
    </string-array>
    <string name="settings_toneUri">Default alarm tone:</string>
    <string name="settings_volume">Default alarm volume:</string>
    <string name="settings_toneCheckbox">Automatically set new tones I select as default tones for new alarms</string>
    <string name="settings_shakeSensitivityMainLabel"><b>Shake sensitivity settings</b>\n<small>Test the sensitivity of the shake
        detector, and change it as you wish</small></string>
    <string name="shakeSensitivityChangeLabel"><small>Change sensitivity:</small></string>
    <string name="leastSensitiveLabel">\u2191\nLeast\nsensitive</string>
    <string name="mostSensitiveLabel">\u2191\nMost\nsensitive</string>
    <string name="testShake"><small><b>Test shake sensitivity</b>\nTap to enable the shake detector so that you can
        choose the sensitivity that correctly suits you.</small></string>
    <string name="updateAlarm_notifMessage">Activating alarms. This may take a while…</string>
    <string name="updateAlarm_alarmMissedTitle">Alarm missed!</string>
    <string name="updateAlarm_alarmMissedText">The alarm at %s did not ring.</string>
    <string name="title_shakeDetectionTest">Test sensitivity of shake detector</string>
    <string name="message_shakeDetectionTest">Shake your phone. A vibration will tell you that a shake event has
    been detected. Change the sensitivity as per your choice.</string>
    <string name="negative_shakeDetectionTest">Stop</string>
    <string name="batteryOptim_message">Please disable battery optimizations for this app. If this app is
        optimized, it might not be able to ring the alarm.</string>
    <string name="batteryOptim_title">Disable battery optimizations</string>
    <string name="batteryOptim_positive">Proceed</string>
    <string name="batteryOptim_negative">Maybe later</string>
    <string name="batteryOptim_neutral">Never show again</string>
</resources>